Attempt to prevent overflow on iphone

--- a/styling/reset.css
+++ b/styling/reset.css
@@ -26,13 +26,17 @@
   }
 }
 
+html, body {
+  width: 100vw;
+  overflow-x: hidden;
+}
+
 body {
   /* 4. Add accessible line-height */
   line-height: 1.5;
   /* 5. Improve text rendering */
   -webkit-font-smoothing: antialiased;
-  width: 100vw;
-  overflow-x: hidden;
+
 }
 
 /* 6. Improve media defaults */
